<resources>
    <string name="app_name">CoinBlesk</string>
    <string name="title_activity_login">CoinBlesk</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_main">Account Overview</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_receive_payment">Request Bitcoins</string>
    <string name="title_activity_send_payment">Send Bitcoins</string>
    <string name="title_activity_pay_in">Pay In</string>
    <string name="title_activity_pay_out">Pay Out</string>
    <string name="title_activity_profile_account">Profile</string>
    <string name="title_activity_edit_email_account_profile">Update E-Mail</string>
    <string name="title_activity_edit_passwotrd_account_profile">Update Password</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_setting_pay_out_rules">Pay out Rules</string>
    <string name="title_activity_choose_payment">Choose Payment Method</string>
    <string name="title_activity_address_book">Address Book</string>
    <string name="loginUsernameEditText">Enter your username</string>
    <string name="loginPasswordEditText">Enter your password</string>
    <string name="loginPasswordOrUsernameForgottenTextView">Forgot username or password</string>
    <string name="loginSignUpBtn">Sign up</string>
    <string name="loginSignInBtn">Sign in</string>
    <string name="enter_username_password">Please enter a username and a password</string>
    <string name="establish_internet_connection">Please establish a internet connection to proceed.</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_client_version_title">Update available</string>
    <string name="invalid_client_version">Please update this app. This version is outdated and is no longer supported.</string>
    <string name="resetPW_descriptionTextView">To reset your password please insert your registrated Email address below and click Reset</string>
    <string name="resetPW_emailEditText">Enter your e-mail address</string>
    <string name="resetPW_resetButton">Reset Password</string>
    <string name="signUpEditUsernameText">Enter your username</string>
    <string name="signUpEditEmailText">Enter your e-mail address</string>
    <string name="signUpEditPasswordText">Enter your password</string>
    <string name="signUpEditConfirmPasswordText">Confirm your password</string>
    <string name="signUpTermOfUseTextView">Read term and conditions</string>
    <string name="signUpCheckBox">I agree to the term of Service</string>
    <string name="signUpAgreeBtn">Sign up</string>
    <string name="registration_field_not_empty">Please fill out all fields.</string>
    <string name="registration_email_not_valid">E-Mail address is not valid.</string>
    <string name="registration_password_lenght_error">Password has an invalid form! Please insert a password with a length of 4 until 20 characters.</string>
    <string name="registration_username_error">Username has an invalid form!\nOnly letters and numbers with a minimum length of 4 charcters are excepted.</string>
    <string name="registration_tou_not_accepted">Please read and accept the term of use.</string>
    <string name="registration_password_not_equal">The entered passwords do not match, please try again.</string>
    <string name="registration_successful">Please check your emails to verify your account. Your Account has successfully been created. Without verification you can not login.</string>
    <string name="termOfUseTitleView">Terms and Conditions</string>
    <string name="termOfUseTextView">This application was developed as part of a Master Project at the Institute for 
        Informatics at the University of Zurich (Switzerland).\nWe do not take any responsibility for a loss of your Bitcoins
         in case of a system/hardware failure or by malicious thirdparty influence. Please be aware that this application is 
         still in its Beta Stadium and failures may occur.
         \nUniversity of Zurich, 2014\n\nReferences:\nLogo: https://en.bitcoin.it/wiki/Promotional_graphics\nSmartphone Base for animated NFC image: Smartphone by Matthieu Mercier from The Noun Project	</string>
    <string name="termOfUseImageCloseBtn">Close terms of use</string>
    <string name="createAccountSuccessful">Registration confirmation</string>
    <string name="mainActivityTextView">Overview</string>
    <string name="payButton">Create new Transaction</string>
    <string name="lastFewTransactionsTitle">Your last %1$s transactions:</string>
    <string name="mainActivity_processTransactionTitle">Process Transaction</string>
    <string name="mainActivity_processTransactionInstruction">Hold devices together to process transaction initiated by counterparty</string>
    <string name="mainActivity_or">OR</string>
    <string-array name="drawerItems_array">
        <item>User Profile</item>
        <item>Create new Transaction</item>
        <item>Transaction History</item>
        <item>Settings</item>
        <item>Top Up Account</item>
        <item>Pay out to BTC address</item>
        <item>Address Book</item>
        <item>Reconnect to Server</item>
        <item>Help</item>
        <item>Sign out</item>
    </string-array>
    <string name="recent_payments">Recent Payments</string>
    <string name="history_activity_no_transactions_text">There are no transactions to display.</string>
    <string name="history_activity_get_by_email">Click to receive the complete list of transactions by email.</string>
    <string-array name="history_filter">
        <item>Transaction</item>
        <item>Pay In</item>
        <item>Pay In (unconfirmed)</item>
        <item>Pay Out</item>
    </string-array>
    <string name="payment_failure">Payment failed</string>
    <string name="payment_success">Payment successful</string>
    <string name="payPayment_exchangeRate">Exchange Rate:</string>
    <string name="payPayment_balanceDescription">Balance:</string>
    <string name="payPayment_paymentDescription">Please check the username and the amount to accept/reject the payment.</string>
    <string name="payPayment_pay">Pay</string>
    <string name="payPayment_usernameTitle">To:</string>
    <string name="payPayment_amountBTCTitle">Amount:</string>
    <string name="payPayment_accept">Accept Payment</string>
    <string name="payPayment_reject">Reject Payment</string>
    <string name="payPayment_toggleText">Accept automatically</string>
    <string name="receivePayment_charge">Request</string>
    <string name="receivePayment_exchangeRate">Exchange Rate: </string>
    <string name="receivePayment_enter">Enter amount in</string>
    <string name="receivePayment_currency">Currency:</string>
    <string name="receivePayment_amount_hint">Enter amount</string>
    <string name="no_connection_server">No connection to server!\nYou are in offline mode.</string>
    <string name="receivePayment_fee">Including fee of</string>
    <string name="receivePayment_balanceTitle">Balance:</string>
    <string name="sendPayment_title">Send</string>
    <string name="sendPayment_enterUsernameReceiver">Enter Username Receiver</string>
    <string name="sendPayment_sendButton">Send</string>
    <string name="sendPayment_balanceTitle">Balance:</string>
    <string name="sendPayment_selectReceiver">Select receiver</string>
    <string name="sendPayment_error">Problems occurred while sending your transaction. Please try again later.</string>
    <string name="sendPayment_error_user">Error. You can not send a transaction to yourself.</string>
    <string name="sendPayment_dialog_title">Confirm Transaction</string>
    <string name="sendPayment_dialog_message">By your confirmation %1$s are sent to %2$s.</string>
    <string name="sendPayment_dialog_confirm">Send</string>
    <string name="sendPayment_balance_error">Your account has not enough funds to do this transaction.</string>
    <string name="payment_notification_success_payer">You paid %1$s to %2$s</string>
    <string name="payment_notification_success_payee">You got %1$s from %2$s</string>
    <string name="textView_currency">currency</string>
    <string name="payIn_title">Pay In</string>
    <string name="payIn_instruction">Please submit your bitcoins to the following address. As soon as the incoming payment is verified we update your account balance. This takes approximately 1 hour.</string>
    <string name="payIn_copy">Copy To Clipboard</string>
    <string name="copy_clipboard">Address copied to clipboard</string>
    <string name="payIn_sendMail">Send to Email</string>
    <string name="payIn_addressTitle">Bitcoin Address:</string>
    <string name="payIn_showQR">Show QR Code</string>
    <string name="payIn_closeQR">Close</string>
	<string name="payIn_qr_error">Error: Can\'t create QR code.</string>
    <string name="setting_payOut_balance_title">Balance limit in Bitcoins</string>
    <string name="setting_payOut_balance_Value">Min. Value is at 0.0001 BTC</string>
    <string name="setting_payOut_day_title">Select Days</string>
    <string name="setting_payOut_day_monday">Monday</string>
    <string name="setting_payOut_day_tuesday">Tuesday</string>
    <string name="setting_payOut_day_wednesday">Wednesday</string>
    <string name="setting_payOut_day_thursday">Thursday</string>
    <string name="setting_payOut_day_friday">Friday</string>
    <string name="setting_payOut_day_saturday">Saturday</string>
    <string name="setting_payOut_day_sunday">Sunday</string>
    <string name="setting_payOut_time_title">Select Time</string>
    <string name="payOut_title">Pay Out</string>
    <string name="payOut_info">Info: To make sure your pay out will be accepted and implemented in the blockchain, a fee of currently 0.0001 BTC is deducted.</string>
    <string name="payOut_BalanceText">Current Balance:</string>
    <string name="PayOut_AmountText">PayOut Amount:</string>
    <string name="payOut_AddressText">PayOut Address:</string>
    <string name="payOut_Address">Enter Bitcoin Address</string>
    <string name="payOut_payOut">Pay Out</string>
    <string name="payout_exchangeRateText">Exchange Rate:</string>
    <string name="fill_necessary_fields">Please fill out all necessary fields.</string>
    <string name="payOut_ButtonAll">All</string>
    <string name="payOut_ButtonScanQRText">Scan QR</string>
    <string name="payOut_NoQRCode">Bitcoin address could not be scanned.</string>
    <string name="payOut_enterAmount">Enter amount</string>
	<string name="payOut_successful">Your PayOut transaction of %1$s was successfully sent to the Bitcoin network.</string>
    <string name="profileUsernameTitle">Username:</string>
    <string name="profileUsernameText"></string>
    <string name="profileEmailTitle">E-Mail:</string>
    <string name="profileEmailText"></string>
    <string name="profileEditEmailBtn">Edit your e-mail address</string>
    <string name="profilePasswordTitle">Password</string>
    <string name="profileEditPasswordBtn">Change your password</string>
    <string name="profileEditDeletedUserAccountBtn">Delete Account</string>
    <string name="action_warning">No connection! Connect by selecting "Connect to Server"</string>
    <string name="menu_sessionCountdown"></string>
    <string name="menu_refreshSession">Refresh Session</string>
    <string name="firstTimeInfo_title">Information NFC Handling</string>
    <string name="firstTimeInfo_instruction_backToBack">Back to Back</string>
    <string name="firstTimeInfo_instruction_backToBack_explanation">(Gap 0&#8211;2cm)</string>
    <string name="firstTimeInfo_instruction_or">OR</string>
    <string name="firstTimeInfo_instruction_acr">Put smartphone onto NFC device</string>
    <string name="firstTimeInfo_instruction_close">Close Information</string>
</resources>