<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Settings, should always be in the overflow -->

     <item android:id="@+id/action_warning"
        android:icon="@drawable/ic_alerts_and_states_warning"
        android:orderInCategory="200"
        android:title="@string/action_warning"
        android:showAsAction="always"
        android:visible="true" android:enabled="true"/>
     
     
      <item android:id="@+id/menu_session_countdown"
          android:title="@string/menu_sessionCountdown"
          android:orderInCategory="100"
          android:showAsAction="always"
          android:actionViewClass="android.widget.TextView" />
      
       <item android:id="@+id/menu_refresh_session"
        android:icon="@drawable/ic_navigation_refresh"
        android:orderInCategory="200"
        android:title="@string/menu_refreshSession"
        android:showAsAction="always"
        android:visible="true" android:enabled="true"/>
</menu>