<android.support.v4.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_activity_profile_account"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- The main content view -->

    <RelativeLayout
        android:id="@+id/RelativeLayoutDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ProfileAccountActivity" >

        <TextView
            android:id="@+id/profileUsernameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/profileUsernameTitle" />

        <TextView
            android:id="@+id/profileUsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileUsernameTitle"
            android:paddingBottom="25dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/profileUsernameText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileUsernameText"
            android:paddingBottom="5dp"
            android:paddingTop="25dp"
            android:text="@string/profileEmailTitle" />

        <TextView
            android:id="@+id/profileEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileEmailTitle"
            android:paddingBottom="25dp"
            android:paddingTop="5dp"
            android:text="@string/profileEmailText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/profileEditEmailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/profileEmailTitle"
            android:layout_alignTop="@+id/profileEmailText"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/profileEditEmailBtn"
            android:src="@drawable/ic_content_edit" />

        <TextView
            android:id="@+id/profilePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/profileEmailText"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="25dp"
            android:text="@string/profilePasswordTitle" />

        <ImageButton
            android:id="@+id/profileEditPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/profilePasswordTitle"
            android:layout_alignLeft="@+id/profileEditEmailBtn"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/profileEditPasswordBtn"
            android:src="@drawable/ic_content_edit" />

        <Button
            android:id="@+id/profileEditDeletedUserAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileEditPasswordBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="#cc0000"
            android:text="@string/profileEditDeletedUserAccountBtn"
            android:textStyle="bold" />
    </RelativeLayout>
    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer_profile_account"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>