<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PayInActivity" >

    <TextView
        android:id="@+id/payIn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/payIn_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="54sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/payIn_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/payIn_title"
        android:layout_marginTop="26dp"
        android:text="@string/payIn_instruction" />

    <TextView
        android:id="@+id/payIn_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/payIn_instruction"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/payIn_copyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payIn_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/payIn_copy" />
    
    <Button
        android:id="@+id/payIn_sendMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/payIn_copyButton"
        android:layout_below="@+id/payIn_copyButton"
        android:layout_marginTop="16dp"
        android:text="@string/payIn_sendMail" />

</RelativeLayout>