<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".PayPaymentActivity" >

    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/payPayment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payPayment_pay"
        android:textSize="54sp"
        android:textStyle="italic" />
    
    <TextView
        android:id="@+id/payPayment_exchangeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:textSize="15sp"
        android:text="@string/payPayment_exchangeRate" />
    
	<TextView
        android:id="@+id/payPayment_exchangeRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/payPayment_exchangeRate"
        android:layout_marginLeft="20dp"
        android:layout_alignBaseline="@+id/payPayment_exchangeRate"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/payPayment_balanceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_exchangeRate"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:text="@string/payPayment_balanceDescription" />

    <TextView
        android:id="@+id/payPayment_balanceBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_exchangeRate"
        android:layout_toRightOf="@+id/payPayment_balanceDescription"
        android:layout_alignLeft="@+id/payPayment_exchangeRateValue"
        android:layout_alignBaseline="@+id/payPayment_balanceDescription"
        android:textSize="15sp" />
    
     <TextView
        android:id="@+id/payPayment_balanceCHF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/payPayment_balanceBTC"
        android:layout_below="@+id/payPayment_balanceBTC"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_balanceDescription"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textColor="#33b5e5"
        android:text="@string/payPayment_paymentDescription" />
    
    <TextView
        android:id="@+id/switchText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/payPayment_toggleText" />
    
    <Switch
        android:id="@+id/payPayment_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/switchText"
	    android:layout_alignBaseline="@+id/switchText"
	    android:layout_marginLeft="45dp"
        android:text="" />
    
    <TextView
        android:id="@+id/payPayment_usernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp" 
        android:textStyle="bold"
        android:text="@string/payPayment_usernameTitle" />
     
    <TextView
        android:id="@+id/payPayment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchText"
        android:layout_alignLeft="@+id/payPayment_amountBTC"
	    android:layout_alignBaseline="@+id/payPayment_usernameTitle"
        android:textStyle="bold"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/payPayment_amountBTCTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_usernameTitle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp" 
        android:textStyle="bold"
        android:text="@string/payPayment_amountBTCTitle" />
    
    <TextView
        android:id="@+id/payPayment_amountBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/payPayment_amountBTCTitle"
	    android:layout_alignBaseline="@+id/payPayment_amountBTCTitle"
	    android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/payPayment_amountCHF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payPayment_amountBTCTitle" 
        android:layout_alignLeft="@+id/payPayment_amountBTC"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/payPayment_accept"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/payPayment_amountBTCTitle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/payPayment_accept" />

    <Button
        android:id="@+id/payPayment_reject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/payPayment_accept"
        android:layout_alignParentLeft="true"
        android:text="@string/payPayment_reject"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/payPayment_title"
        android:gravity="right"
        android:src="@drawable/ic_pay_payment_big" />
    
</RelativeLayout>
</ScrollView>